[package]
name = "upstre"
version = "0.0.0"
edition = "2021"

[dependencies]
arc-swap = "1.7.1"
futures-util = { version = "0.3.31", default-features = false }
thiserror = { version = "2.0.6", default-features = false }
tokio = { version = "1.42.0", features = ["rt", "time"] }

[dev-dependencies]
tokio-test = "0.4.4"
